# skynki

./: .dockerignore  .env  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflow/: ci.yaml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docker/compose/pgadmin/: servers.json
migrations/2022-02-13-182044_init/: down.sql  up.sql
src/: main.rs  schema.rs
src/lib/: anki.rs  db_config.rs  errors.rs  mod.rs  repository.rs  skyeng.rs
