[package]
name = "skynki"
version = "0.1.0"
authors = ["Aleksandr Bochev <red.avtovo@gmail.com>"]
edition = "2018"

[dependencies]
# Config
dotenv = "0.15.0"

# IO
reqwest = { version = "0.11.8", features = ["json", "rustls-tls"] }
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.19"

# Db
postgres-types = { version = "0.2.2", features = ["derive", "with-uuid-0_8"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
r2d2 = { version = "0.8.9" }

# Json
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
ajson = "0.2.4"

# Logs
log = "0.4.14"
env_logger = "0.9.0"

#html parser
scraper = "0.12.0"

# errors handling
thiserror = "1.0"